[VEG-120] feat: add gross amount to sold items report
